# demo_compiler

./: .gitignore  CMakeLists.txt  compiler.l  compiler.tab.cpp  compiler.tab.h  compiler.y  lex.yy.cpp  main.cpp  parse_context.cpp  parse_context.h
backend/mix/: mix_emitter.cpp  mix_emitter.h  mix_ir_pass.cpp  mix_ir_pass.h  mix_item.h  mix_opcode.h
frontend/: ast_node.h  compiler.l  compiler.y  compiler_lex_autogen.cpp  compiler_tab_autogen.cpp  compiler_tab_autogen.h  parse_context.cpp  parse_context.h  translate_pass.cpp  translate_pass.h
ir/: block.cpp  block.h  function.cpp  function.h  instruction.cpp  instruction.h  ir_emitter.cpp  ir_emitter.h  program.h  value.cpp  value.h
ir/passes/: identity_removal.cpp  load_store_elimination.cpp  passes.h
